--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-donut.jpg">
           <h4>Seasonal Donuts</h4>
-          </div>
-     </div>
+        </div>
+      </div>
 
       <div class="tea_list2">
         <div class="tea">
@@ -59,42 +59,47 @@
           <img class="tea_img" src="./resources/images/img-bedford-bizarre.jpg">
           <h4>Bed Bizarre Tea</h4>
         </div>
+   #
+
+    </div>
+    </div>
+
+    <div class= "locations_block">
+
+       <div class= "location_content">
+
+         <div class="locations_title">
+           <h3>Locations</h3>
+         </div>
+
+         <div class="list_locations">
+           <div class="address">
+             <h3>Downtown</h3>
+             <p>384 West 4th St</p>
+             <p>suite 108</p>
+             <p>Portland, Maine</p>
+           </div>
+
+           <div class="address">
+             <h3>East Bayside</h3>
+             <p>3433 Phisherman's Avenue</p>
+             <p>(Northwest Corner)</p>
+             <p>Portland, Maine</p>
+           </div>
+
+           <div class="address">
+             <h3>Oakdale</h3>
+             <p>515 Crescent Avenue</p>
+             <p>Second Floor</p>
+             <p>Portland, Maine</p>
+           </div>
+         </div>
+
+       </div>
+
      </div>
 
-    <div class="locations">
-      <div class= "location-content">
-        <h2 class="locations_text">Locations</h2>
 
-        <div class="three_stores">
-          <div class="store">
-            <h3>Downtown</h3>
-            <p>
-              384 West 4th St <br />
-              suite 108 <br />
-              Portland, Maine
-            </p>
-          </div>
-
-          <div class="store">
-            <h3>East Bayside</h3>
-            <p>
-              3433 Phisherman's Avenue <br />
-              (Northwest Corner)<br />
-              Portland, Maine
-            </p>
-          </div>
-
-          <div class="store">
-            <h3>Oakdale</h3>
-            <p>
-              515 Crescent Avenue <br />
-              Second Floor<br />
-              Portland, Maine
-            </p>
-          </div>
-        </div>
-    </div>
-<!--
     <div class="footer">
       <h2>The Tea Cozy</h2>
       <h5>contact@theteacozy.com</h5>
@@ -103,9 +108,10 @@
 
     <div class= "bottom_space">
     </div>
+
     <div class="copy_right">
-      <p>copyright The Tea Cozy 2017</p>
+      <p class="copy_right_text">copyright The Tea Cozy 2017</p>
     </div>
-  -->
+
   </body>
 </html>
