--- a/index.html
+++ b/index.html
@@ -23,43 +23,42 @@
 
     <div class="our_mission">
       <div class="mission_statement">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        <h1>Our Mission</h1>
+        <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
       </div>
     </div>
 
     <div class="tea_of_the_month">
-      <h2>Tea of the Month</h2>
-      <h4>What's Steeping at The Tea Cozy?</h4>
+      <h1>Tea of the Month</h1>
+      <h3>What's Steeping at The Tea Cozy?</h3>
 
       <div class="tea_list1">
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-berryblitz.jpg">
-          <h4>Fall Berry Blitz Tea</h4>
+          <h3 class="name_of_tea">Fall Berry Blitz Tea</h3>
         </div>
 
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-spiced-rum.jpg">
-          <h4>Spiced Rum Tea</h4>
+          <h3 class="name_of_tea">Spiced Rum Tea</h3>
         </div>
 
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-donut.jpg">
-          <h4>Seasonal Donuts</h4>
+          <h3 class="name_of_tea">Seasonal Donuts</h3>
         </div>
       </div>
 
       <div class="tea_list2">
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-myrtle-ave.jpg">
-          <h4>Myrtle Ave Tea</h4>
+          <h3 class="name_of_tea">Myrtle Ave Tea</h3>
         </div>
 
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-bedford-bizarre.jpg">
-          <h4>Bed Bizarre Tea</h4>
+          <h3 class="name_of_tea">Bed Bizarre Tea</h3>
         </div>
-   #
 
     </div>
     </div>
@@ -68,27 +67,25 @@
 
        <div class= "location_content">
 
-         <div class="locations_title">
-           <h3>Locations</h3>
-         </div>
+        <h1 class="location_title">Locations</h1>
 
          <div class="list_locations">
            <div class="address">
-             <h3>Downtown</h3>
+             <h2>Downtown</h2>
              <p>384 West 4th St</p>
              <p>suite 108</p>
              <p>Portland, Maine</p>
            </div>
 
            <div class="address">
-             <h3>East Bayside</h3>
+             <h2>East Bayside</h2>
              <p>3433 Phisherman's Avenue</p>
              <p>(Northwest Corner)</p>
              <p>Portland, Maine</p>
            </div>
 
            <div class="address">
-             <h3>Oakdale</h3>
+             <h2>Oakdale</h2>
              <p>515 Crescent Avenue</p>
              <p>Second Floor</p>
              <p>Portland, Maine</p>
@@ -101,12 +98,9 @@
 
 
     <div class="footer">
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <h5>917-555-8904</h5>
-    </div>
-
-    <div class= "bottom_space">
+      <h1>The Tea Cozy</h1>
+      <h4>contact@theteacozy.com</h4>
+      <h4>917-555-8904</h4>
     </div>
 
     <div class="copy_right">
