--- a/index.html
+++ b/index.html
@@ -5,34 +5,32 @@
     <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="header">
-      <div class="header_left">
-        <img class="logo" src="./resources/images/img-tea-cozy-logo.png">
-      </div>
 
-      <div class="header_right">
-        <nav>
-          <ul>
-            <li> <a href="#mission">Mission</a> </li>
-            <li> <a href="#featured">Featured Tea</a> </li>
-            <li> <a href="#locations">Locations</a> </li>
-          </ul>
-        </nav>
-      </div>
+    <div id="header">
+      <img class="logo" src="./resources/images/img-tea-cozy-logo.png">
+      <nav>
+        <ul class="navigation">
+          <li> <a href="#mission">Mission</a> </li>
+          <li> <a href="#featured">Featured Tea</a> </li>
+          <li> <a href="#locations">Locations</a> </li>
+        </ul>
+      </nav>
     </div>
 
-    <div class="our_mission">
+
+    <div id="mission">
       <div class="mission_statement">
         <h1>Our Mission</h1>
-        <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
+        <h3>Handpicked, Artisanally Curated, Free Range, Sustainable,
+          Small Batch, Fair Trade, Organic Tea</h3>
       </div>
     </div>
 
-    <div class="tea_of_the_month">
+    <div id="featured">
       <h1>Tea of the Month</h1>
       <h3>What's Steeping at The Tea Cozy?</h3>
 
-      <div class="tea_list1">
+      <div class="group1">
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-berryblitz.jpg">
           <h3 class="name_of_tea">Fall Berry Blitz Tea</h3>
@@ -49,7 +47,7 @@
         </div>
       </div>
 
-      <div class="tea_list2">
+      <div class="group2">
         <div class="tea">
           <img class="tea_img" src="./resources/images/img-myrtle-ave.jpg">
           <h3 class="name_of_tea">Myrtle Ave Tea</h3>
@@ -60,16 +58,19 @@
           <h3 class="name_of_tea">Bed Bizarre Tea</h3>
         </div>
 
-    </div>
+
+
+      </div>
+
     </div>
 
-    <div class= "locations_block">
+    <div id="locations">
 
        <div class= "location_content">
 
         <h1 class="location_title">Locations</h1>
 
-         <div class="list_locations">
+        <div class="list_locations">
            <div class="address">
              <h2>Downtown</h2>
              <p>384 West 4th St</p>
@@ -97,14 +98,14 @@
      </div>
 
 
-    <div class="footer">
+    <div id="footer">
       <h1>The Tea Cozy</h1>
       <h4>contact@theteacozy.com</h4>
       <h4>917-555-8904</h4>
     </div>
 
     <div class="copy_right">
-      <p class="copy_right_text">copyright The Tea Cozy 2017</p>
+      <h4 class="copy_right_text">copyright The Tea Cozy 2017</h4>
     </div>
 
   </body>
